--- a/tiktok-frontend/styles/globals.css
+++ b/tiktok-frontend/styles/globals.css
@@ -15,12 +15,38 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   html {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    color: black;
+    background: white;
   }
+}
+
+.app {
+  height: 100vh;
+  background: #2c2d30;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loginContainer {
+  background-color: white;
+  width: 350px;
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 15px;
+}
+
+.loginSubtitle {
+  font-size: 1rem;
+  color: #959595;
+  text-align: center;
+  margin-top: -80px;
 }
